sign-up/init API done
